# nuclei-graph-transformer

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  analysis.py  pyproject.toml
.gemini/: styleguide.md
.github/workflows/: pytest.yml
amacr_mask/: test.ipynb
configs/: base.yaml  default.yaml  exploration.yaml  ml.yaml  nuclei_graph.yaml  preprocessing.yaml  report.yaml  visualization.yaml
configs/callbacks/attention/: nuclei_masks.yaml
configs/callbacks/plot_curves/: mil.yaml  wsl.yaml
configs/callbacks/predictions/: mil.yaml  nuclei_masks.yaml
configs/data/datasets/: nuclei_dataset.yaml  prostate_cancer.yaml
configs/data/sampler/: weighted_random_sampler.yaml
configs/data/samplers/: weighted_random_sampler.yaml
configs/experiment/: predict.yaml  vanilla_transformer.yaml
configs/exploration/: save_metadataset.yaml
configs/losses/: supervised_bce.yaml  supervised_bce_with_consistency.yaml  supervised_bce_with_entropy.yaml  supervised_bce_with_graph_consistency.yaml  supervised_bce_with_pointwise_consistency.yaml
configs/postprocessing/: misclassifications.yaml  slide_metrics.yaml
configs/preprocessing/: amacr_masks.yaml  amacr_masks_refinement.yaml  annotation_labels.yaml  annotation_masks.yaml  base.yaml  cam_indicators.yaml  cam_labels.yaml  cam_masks.yaml  cam_relabeling.yaml  data_split.yaml  efd_features.yaml  explainability_masks.yaml  exploration.yaml  merge_cam_masks.yaml  metadata_mapping.yaml  nuclei_labeling.yaml  nuclei_segmentation.yaml  nuclei_standardization.yaml  segmentation.yaml  standardize_nuclei.yaml  tissue_masks.yaml  unipolar_heatmap_labels.yaml  upload_masks.yaml
configs/report/: default.yaml
configs/visualization/: polygon2raster.yaml  polygons2raster.yaml  report.yaml
exploration/: README.md  save_metadataset.py
exploration/panda/: save_metadataset.py
exploration/prostate_cancer/: save_metadataset.py
exploration/prostate_cancer_mmci_tl/: save_metadataset.py
lib/graph_pytorch_ext/: Cargo.toml  graph_pytorch_ext.pyi  pyproject.toml
lib/graph_pytorch_ext/src/: lib.rs
nuclei_graph/: __main__.py  configuration.py  nuclei_graph_model.py  nuclei_graph_typing.py  nuclei_mil_meta_arch.py  nuclei_wsl_meta_arch.py  typing.py  wsl_meta_arch.py
nuclei_graph/callbacks/: __init__.py  heatmap.py  nuclei_masks.py  plot_curves.py  prediction_labels.py  prediction_masks.py  prediction_metrics.py  predictions.py
nuclei_graph/data/: __init__.py  block_mask.py  data_module.py  efd.py  supervision.py
nuclei_graph/features/: __init__.py  efd_normalization.py
nuclei_graph/losses/: supervised_bce.py  supervised_bce_with_consistency.py  supervised_bce_with_entropy.py  supervised_bce_with_graph_consistency.py  supervised_bce_with_pointwise_consistency.py
nuclei_graph/masks/: __init__.py  nuclei_mask.py
nuclei_graph/utils/: __init__.py  block_mask.py  pos_weight.py  torch_efd.py
postprocessing/: misclassifications.py  slide_metrics.py
postprocessing/dataset_metrics/: graph_level.py  nuclei_level.py
preprocessing/: README.md  __init__.py  amacr_mask.py  amacr_mask_postprocess.py  amacr_mask_postprocess_single.py  amacr_masks.py  amacr_masks_refinement.py  annotation_labels.py  annotation_masks.py  cam_labels.py  data_split.py  efd_features.py  log.py  merge_cam_masks.py  metadata_mapping.py  nuclei_segmentation.py  nuclei_standardization.py  pos_weight.py  slide_helpers.py  standardize_nuclei.py  tissue_mask.py  tissue_mask_erode_edges.py  tissue_masks.py  tissue_masks_erode_edges.py  unipolar_heatmap_labels.py
preprocessing/annotation_masks/: panda.py  prostate_cancer_mmci_tl.py
preprocessing/metadata_mapping/: panda.py  prostate_cancer_mmci_tl.py
preprocessing/panda/: annotation_labels.py
scripts/exploration/: run_save_metadataset.py  save_metadataset.py
scripts/preprocessing/:  run_annotation_masks.py   run_cam_labels.py   run_merge_cam_masks.py   run_metadata_mapping.py  run_amacr_masks.py  run_amacr_masks_refinement.py  run_annotation_labels.py  run_annotation_masks.py  run_cam_labels.py  run_data_split.py  run_efd_features.py  run_merge_cam_masks.py  run_metadata_mapping.py  run_nuclei_segmentation.py  run_nuclei_standardization.py  run_standardize_nuclei.py  run_tissue_masks.py  run_unipolar_heatmap_labels.py
scripts/visualization/:  run_polygons_rasterization.py  run_polygons_rasterization.py
tests/: test_block_mask.py
tests/data/: test_block_mask.py
visualization/: __init__.py  nuclei_mask.py  polygon2raster.py  polygons2raster.py
(+182 files in other folders)
