[project]
name = "nuclei-graph-transformer"
version = "0.1.0"
authors = [
    { name = "Karolína Rusnačková", email = "525276@mail.muni.cz" },
    { name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" },
]
requires-python = ">=3.12, <3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.6.0",
    "ray>=2.35.0",
    "hydra-core>=1.3.2",
    "mlflow==2.22.0",
    "openslide-python>=1.4.2",
    "ratiopath>=1.0.1",
    "transformers>=4.35,<5",
    "einops>=0.8.1",
    "torchvision>=0.24.0",
    "lightning>=2.6.0",
    "torchmetrics>=1.4.1",
    "scikit-learn>=1.5.2",
    "ipykernel>=6.29.5",
    "degraph",
    "rationai-masks",
    "rationai-mlkit",
    "rationai-tiling",
    "ratiopath>=1.0.3",
    "timm>=1.0.25",
    "deprecated>=1.3.1",
]

[tool.uv.sources]
degraph = { git = "https://github.com/RationAI/nuclei-foundation-model.git", branch = "borisim-develop", subdirectory = "lib/degraph" }
rationai-mlkit = { git = "https://github.com/RationAI/mlkit.git", rev = "549f5be72a162e7debf3a911ea4649f50080b1d0"}
rationai-masks = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git" }
rationai-tiling = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git" }
rationai-kube-jobs = { git = "ssh://git@gitlab.ics.muni.cz/rationai/infrastructure/kube-jobs" }

[dependency-groups]
dev = ["mypy", "ruff"]
tests = ["pytest", "pytest-cov"]
