[project]
name = "graph_pytorch_ext"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"
[tool.maturin]
features = ["pyo3/extension-module"]

